# rate-microservice

./: pyproject.toml  readme.md
rate/: db.sqlite3
rate/currency/: models.py  serializer.py  utils.py  views.py  yasg.py
rate/currency/migrations/: 0001_initial.py
rate/currency/templates/currency/: base.html
rate/logs/: settings.py
rate/rate/: asgi.py  settings.py  urls.py  wsgi.py
